<resources>
    <string name="app_name">Vcare</string>

    <string name="ma_vaccin">VACCINS</string>
    <string name="ma_pfizer">PFIZER</string>
    <string name="ma_available">Availability :-</string>
    <string name="ma_count_1">1050</string>
    <string name="ma_price">Price</string>
    <string name="ma_rupee">750 Rs</string>
    <string name="ma_rupee1">550 Rs</string>
    <string name="ma_get">GET MY VACCIN</string>
    <string name="ma_sinopharm">SINOPHARM</string>
    <string name="ma_count_2">512</string>
    <string name="ma_appwidget_text">EXAMPLE</string>
    <string name="ma_booking_for">BOOKING FOR</string>
    <string name="ma_vaccin2">VACCIN</string>
    <string name="ma_name">Name :-</string>
    <string name="ma_vaccinname">Vaccin Name :-</string>
    <string name="ma_age">Age :-</string>
    <string name="ma_phone">Phone Number :-</string>
    <string name="ma_address">Address :-</string>
    <string name="ma_next">NEXT</string>
    <string name="ma_date">Date :-</string>
    <string name="ma_time">Time :-</string>
    <string name="ma_getapp">GET MY APPOINTMENT</string>
    <string name="ma_co_vacc">COVID VACCINATION</string>
    <string name="ma_vacc_cer">VACCIN CERTIFICATE</string>
    <string name="ma_covid19">COVID-19</string>
    <string name="ma_co_covidtest">COVID TEST</string>
    <string name="ma_co_do">Do You Have Any Symptoms?</string>
    <string name="ma_co_head">Headache</string>
    <string name="ma_co_run">Runny Nose</string>
    <string name="ma_co_fe">Feverish</string>
    <string name="ma_co_are">Are You  Under Self Quarantine?</string>
    <string name="ma_co_yes">YES</string>
    <string name="ma_co_no">NO</string>
    <string name="ma_do_my">MY DOCUMENTS</string>
    <string name="ma_do_doc1">March-Bloodtest</string>
    <string name="ma_do_doc2">March-prescription</string>
    <string name="ma_do_doc3">MRI scan</string>
    <string name="ma_do_view">VIEW</string>
    <string name="ma_fe_feed">FEEDBACK</string>
    <string name="ma_fe_workshopname">Workshop Name</string>
    <string name="ma_fe_com">Feedback</string>
    <string name="ma_fe_sub">SUBMIT</string>
    <string name="ma_pa_app">My Vaccin Appointments</string>
    <string name="ma_pa_vabo">Vaccin Booking </string>
    <string name="ma_pa_name">Mathy Siva</string>
    <string name="ma_pa_vacname">Pfizer</string>
    <string name="ma_pa_time">08:30AM</string>
    <string name="ma_pa_date">21.05.2021</string>
    <string name="ma_pa_cancel">CANCEL BOOKING</string>
    <string name="ma_pa_det">DETAILS >></string>
    <string name="ma_pa_name2">Kokulan Siva</string>
    <string name="ma_pa_vacname2">Sinopharm</string>
    <string name="ma_det_edit">Edit Your Appointment</string>
    <string name="ma_det_name">Mathy Siva</string>
    <string name="ma_det_vac">Pfizer</string>
    <string name="ma_det_time">08:30AM</string>
    <string name="ma_det_date">21.05.2021</string>
    <string name="ma_det_phone">0769176735</string>
    <string name="ma_det_save">SAVE</string>
    <string name="invalid_name">Please Enter Valid Name</string>
    <string name="invalid_name_1">Please Enter A valid Phone Number</string>
    <string name="invalid_name_2">Feild Should Not Be Empty</string>
    <string name="invalid_name_3">Feild Should Not Be Empty</string>
    <string name="invalid_name_4">Please Enter Valid Email Address</string>
    <string name="title_activity_dashboard">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>