<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feedback"
    android:background="@color/background_common">

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="90dp"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="445dp"
        android:numStars="5"
        android:outlineSpotShadowColor="@color/white" />

    <TextView
        android:id="@+id/ma_feedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="120dp"
        android:layout_marginRight="120dp"
        android:text="@string/ma_fe_feed"
        android:textColor="@color/ma_tittle"
        android:textSize="40dp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/ma_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="23dp"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="91dp"
        android:text="@string/ma_fe_workshopname"
        android:textColor="@color/black"
        android:textSize="25dp" />

    <TextView
        android:id="@+id/ma_comment2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="27dp"
        android:layout_marginLeft="27dp"
        android:layout_marginTop="193dp"
        android:text="@string/ma_fe_com"
        android:textColor="@color/black"
        android:textSize="25dp" />

    <EditText
        android:id="@+id/ma_com_box_2"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="424dp"
        android:background="#D9D9D9"
        android:inputType="textImeMultiLine" />

    <EditText
        android:id="@+id/ma_com_box2"
        android:layout_width="360dp"
        android:layout_height="169dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="26dp"
        android:layout_marginLeft="26dp"
        android:layout_marginBottom="191dp"
        android:background="#D9D9D9"
        android:inputType="textImeMultiLine" />

    <Button
        android:id="@+id/ma_sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="146dp"
        android:layout_marginRight="146dp"
        android:layout_marginBottom="44dp"
        android:text="@string/ma_fe_sub"
        android:backgroundTint="@color/orange"/>


</RelativeLayout>