<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/ma_det_bigbox_3"
        android:layout_width="379dp"
        android:layout_height="440dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="11dp"
        android:layout_marginLeft="11dp"
        android:layout_marginTop="74dp"
        android:background="@drawable/txt" />


    <TextView
        android:id="@+id/ma_det_edit_3"
        android:layout_width="272dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:text="Edit Your Reservation "
        android:textColor="@color/ma_tittle"
        android:textSize="25dp"
        android:textStyle="italic|bold" />

    <Button
        android:id="@+id/ma_view_edit_1"
        android:layout_width="173dp"
        android:layout_height="67dp"

        android:layout_alignBottom="@+id/ma_det_bigbox_3"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="135dp"
        android:layout_marginLeft="135dp"
        android:layout_marginTop="111dp"
        android:layout_marginBottom="27dp"
        android:text="@string/ma_det_save" />

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="286dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="73dp"
        android:layout_marginLeft="73dp"
        android:layout_marginTop="94dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        android:text="@string/ma_det_name" />

    <EditText
        android:id="@+id/edit_phone"
        android:layout_width="286dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        android:layout_marginBottom="410dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        android:text="@string/ma_det_vac" />

    <EditText
        android:id="@+id/edit_school"
        android:layout_width="286dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="75dp"
        android:layout_marginLeft="75dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="350dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        android:text="@string/ma_det_time" />

    <EditText
        android:id="@+id/edit_qualification"
        android:layout_width="286dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="77dp"
        android:layout_marginLeft="77dp"
        android:layout_marginTop="260dp"
        android:layout_marginBottom="0dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        android:text="@string/ma_det_date" />

    <EditText
        android:id="@+id/edit_address"
        android:layout_width="286dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="75dp"
        android:layout_marginLeft="75dp"
        android:layout_marginTop="368dp"
        android:layout_marginBottom="-104dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        android:text="@string/ma_det_date" />

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="286dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="75dp"
        android:layout_marginLeft="75dp"
        android:layout_marginTop="314dp"
        android:layout_marginBottom="-50dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        android:text="@string/ma_det_date" />


</RelativeLayout>